// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSelectGroup The ButtonSelectGroup renders (default button style, \`buttonStyle\` not passed) 1`] = `
Array [
  <div
    aria-labelledby="button-select-group-1"
    className="button-select-group"
    role="radiogroup"
  >
    <span
      className="Caption Theinhardt Medium500 GrayPrimary AllCaps"
      id="button-select-group-1"
    >
      options
    </span>
    <div
      aria-hidden={true}
      className="Spacer"
      style={
        Object {
          "height": 4,
        }
      }
    />
    <div
      className="buttonGroup fullWidth"
    >
      <button
        className="Button Medium Stateful"
        onClick={[Function]}
        role="radio"
        type="button"
      >
        <span
          id="selection-option-1"
        >
          foo
        </span>
      </button>
      <button
        className="Button Medium Stateful"
        onClick={[Function]}
        role="radio"
        type="button"
      >
        <span
          id="selection-option-1"
        >
          bar
        </span>
      </button>
    </div>
  </div>,
  "",
]
`;

exports[`ButtonSelectGroup The ButtonSelectGroup renders (default button style, \`buttonStyle\` passed) 1`] = `
Array [
  <div
    aria-labelledby="button-select-group-1"
    className="button-select-group"
    role="radiogroup"
  >
    <span
      className="Caption Theinhardt Medium500 GrayPrimary AllCaps"
      id="button-select-group-1"
    >
      options
    </span>
    <div
      aria-hidden={true}
      className="Spacer"
      style={
        Object {
          "height": 4,
        }
      }
    />
    <div
      className="buttonGroup fullWidth"
    >
      <button
        className="Button Medium Stateful"
        onClick={[Function]}
        role="radio"
        type="button"
      >
        <span
          id="selection-option-1"
        >
          foo
        </span>
      </button>
      <button
        className="Button Medium Stateful"
        onClick={[Function]}
        role="radio"
        type="button"
      >
        <span
          id="selection-option-1"
        >
          bar
        </span>
      </button>
    </div>
  </div>,
  "",
]
`;

exports[`ButtonSelectGroup The ButtonSelectGroup renders (white button style) 1`] = `
Array [
  <div
    aria-labelledby="button-select-group-1"
    className="button-select-group"
    role="radiogroup"
  >
    <span
      className="Caption Theinhardt Medium500 GrayPrimary AllCaps"
      id="button-select-group-1"
    >
      options
    </span>
    <div
      aria-hidden={true}
      className="Spacer"
      style={
        Object {
          "height": 4,
        }
      }
    />
    <div
      className="buttonGroup fullWidth"
    >
      <button
        className="Button Medium Stateful White"
        onClick={[Function]}
        role="radio"
        type="button"
      >
        <span
          id="selection-option-1"
        >
          foo
        </span>
      </button>
      <button
        className="Button Medium Stateful White"
        onClick={[Function]}
        role="radio"
        type="button"
      >
        <span
          id="selection-option-1"
        >
          bar
        </span>
      </button>
    </div>
  </div>,
  "",
]
`;
